# drug_discovery_platform

./: .env.example  .gitignore  CLAUDE.md  DRUG_DISCOVERY_PLATFORM.md  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: deps.py
backend/api/routes/: admet.py  ai_query.py  design.py  docking.py  jobs.py  molecules.py  pipeline.py  structures.py  targets.py
backend/core/: config.py  database.py  pipeline.py  queue.py  storage.py  websocket.py
backend/models/: database.py  schemas.py
backend/modules/: admet.py  ai_query.py  base.py  docking.py  mol_generation.py  protein_design.py  structure_pred.py  target_lookup.py
backend/tests/: conftest.py  test_admet.py  test_ai_query.py  test_docking.py  test_jobs.py  test_molecules.py  test_pipeline.py  test_structure_pred.py  test_target_lookup.py
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  layout.tsx  page.tsx
frontend/app/jobs/[id]/: page.tsx
frontend/components/molecule/: MoleculeCard.tsx  SmilesInput.tsx
frontend/components/pipeline/: PipelineWizard.tsx  Step1Target.tsx  Step2Task.tsx  Step3Structure.tsx  Step4Running.tsx  Step5Results.tsx  Step6Viewer.tsx
frontend/components/ui/: AdmetBadge.tsx  ConfidencePill.tsx  JobProgressBar.tsx
frontend/components/viewer/: StructureViewer.tsx
frontend/hooks/: useJob.ts  usePipeline.ts
frontend/lib/: api.ts  types.ts  websocket.ts
